--- a/src/com/rentacar/view/RegisterCompanyGUI.form
+++ b/src/com/rentacar/view/RegisterCompanyGUI.form
@@ -108,7 +108,7 @@
               <grid row="8" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Hizmet Şehriniz"/>
+              <text value="Şehriniz"/>
             </properties>
           </component>
           <component id="ed9cc" class="javax.swing.JComboBox" binding="comboBox1" default-binding="true">
