--- a/src/com/rentacar/view/Login.form
+++ b/src/com/rentacar/view/Login.form
@@ -77,7 +77,7 @@
               <grid row="4" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Giriş Türü"/>
+              <text value="Kullanıcı Türü"/>
             </properties>
           </component>
           <component id="e0a6f" class="javax.swing.JComboBox" binding="cmbBx_loginType">
