--- a/src/com/rentacar/view/RegisterCustomerGUI.form
+++ b/src/com/rentacar/view/RegisterCustomerGUI.form
@@ -34,7 +34,7 @@
         <properties/>
         <border type="none"/>
         <children>
-          <grid id="d94b6" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="d94b6" binding="pnl_nameSurname" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -50,7 +50,7 @@
                   <text value="Adınız"/>
                 </properties>
               </component>
-              <component id="5e662" class="javax.swing.JTextField" binding="textField1" default-binding="true">
+              <component id="5e662" class="javax.swing.JTextField" binding="fld_name">
                 <constraints>
                   <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
@@ -66,7 +66,7 @@
                   <text value="Soyadınız"/>
                 </properties>
               </component>
-              <component id="ac16b" class="javax.swing.JTextField" binding="textField2" default-binding="true">
+              <component id="ac16b" class="javax.swing.JTextField" binding="fld_sname">
                 <constraints>
                   <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
@@ -89,7 +89,7 @@
               <text value="Şifre"/>
             </properties>
           </component>
-          <component id="859ef" class="javax.swing.JPasswordField" binding="passwordField1" default-binding="true">
+          <component id="859ef" class="javax.swing.JPasswordField" binding="fld_password">
             <constraints>
               <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -107,7 +107,7 @@
               <text value="Şifre Tekrar"/>
             </properties>
           </component>
-          <component id="4e34d" class="javax.swing.JPasswordField" binding="passwordField2" default-binding="true">
+          <component id="4e34d" class="javax.swing.JPasswordField" binding="fld_passwordTry">
             <constraints>
               <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -131,7 +131,7 @@
               <text value="Kullanıcı Adı"/>
             </properties>
           </component>
-          <component id="4d9e2" class="javax.swing.JTextField" binding="textField3" default-binding="true">
+          <component id="4d9e2" class="javax.swing.JTextField" binding="fld_uname">
             <constraints>
               <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
