--- a/src/com/rentacar/view/CompanyGUI.form
+++ b/src/com/rentacar/view/CompanyGUI.form
@@ -195,7 +195,7 @@
           </grid>
         </children>
       </tabbedpane>
-      <grid id="c5feb" binding="pnl_top" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="c5feb" binding="pnl_top" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="1" fill="1" indent="0" use-parent-layout="false"/>
@@ -218,6 +218,15 @@
             </constraints>
             <properties>
               <text value="Çıkış"/>
+            </properties>
+          </component>
+          <component id="1e2ed" class="javax.swing.JLabel" binding="lbl_uname">
+            <constraints>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <font size="10"/>
+              <text value="Kullanıcı adı"/>
             </properties>
           </component>
         </children>
