--- a/src/com/rentacar/view/CustomerGUI.form
+++ b/src/com/rentacar/view/CustomerGUI.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="wrapper" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
-      <xy x="20" y="20" width="865" height="795"/>
+      <xy x="20" y="20" width="865" height="815"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -89,7 +89,7 @@
                   </component>
                 </children>
               </scrollpane>
-              <grid id="ec633" binding="pnl_side" layout-manager="GridLayoutManager" row-count="10" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+              <grid id="ec633" binding="pnl_side" layout-manager="GridLayoutManager" row-count="5" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints>
                   <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -97,10 +97,18 @@
                 <properties/>
                 <border type="none"/>
                 <children>
-                  <grid id="4a7ad" binding="pnl_search" layout-manager="GridLayoutManager" row-count="12" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                  <component id="d83d3" class="javax.swing.JButton" binding="btn_allCar">
+                    <constraints>
+                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <text value="Tüm Araçları Gör"/>
+                    </properties>
+                  </component>
+                  <grid id="4a7ad" binding="pnl_search" layout-manager="GridLayoutManager" row-count="11" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                     <margin top="0" left="0" bottom="0" right="0"/>
                     <constraints>
-                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                      <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties/>
                     <border type="none"/>
@@ -118,7 +126,9 @@
                           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
                         </constraints>
                         <properties>
-                          <model/>
+                          <model>
+                            <item value="34"/>
+                          </model>
                         </properties>
                       </component>
                       <component id="dc37c" class="javax.swing.JLabel">
@@ -164,7 +174,7 @@
                           </grid>
                         </constraints>
                         <properties>
-                          <text value="2022-06-01"/>
+                          <text value="2022-07-01"/>
                         </properties>
                       </component>
                       <component id="8ef8e" class="javax.swing.JTextField" binding="txtFld_dateLast">
@@ -174,7 +184,7 @@
                           </grid>
                         </constraints>
                         <properties>
-                          <text value="2022-06-26"/>
+                          <text value="2027-12-30"/>
                         </properties>
                       </component>
                       <component id="60867" class="javax.swing.JButton" binding="btn_search">
@@ -204,17 +214,9 @@
                           <text value=""/>
                         </properties>
                       </component>
-                      <component id="d83d3" class="javax.swing.JButton" binding="btn_allCar">
-                        <constraints>
-                          <grid row="11" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                        </constraints>
-                        <properties>
-                          <text value="Tüm Araçları Gör"/>
-                        </properties>
-                      </component>
                     </children>
                   </grid>
-                  <grid id="e35a7" binding="pnl_reserve" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                  <grid id="e35a7" binding="pnl_reserve" layout-manager="GridLayoutManager" row-count="7" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                     <margin top="0" left="0" bottom="0" right="0"/>
                     <constraints>
                       <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -231,77 +233,69 @@
                           <text value="Rezerve"/>
                         </properties>
                       </component>
+                      <component id="98b3f" class="javax.swing.JLabel">
+                        <constraints>
+                          <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                        </constraints>
+                        <properties>
+                          <text value="Araç ID"/>
+                        </properties>
+                      </component>
+                      <component id="c426a" class="javax.swing.JTextField" binding="txtFld_carID">
+                        <constraints>
+                          <grid row="2" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                            <preferred-size width="150" height="-1"/>
+                          </grid>
+                        </constraints>
+                        <properties>
+                          <editable value="false"/>
+                          <enabled value="false"/>
+                          <text value="0"/>
+                        </properties>
+                      </component>
+                      <component id="eaa99" class="javax.swing.JLabel">
+                        <constraints>
+                          <grid row="3" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                        </constraints>
+                        <properties>
+                          <text value="Tarih Aralığı"/>
+                        </properties>
+                      </component>
+                      <component id="68ff9" class="javax.swing.JTextField" binding="txtFld_firstDate">
+                        <constraints>
+                          <grid row="4" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                            <preferred-size width="150" height="-1"/>
+                          </grid>
+                        </constraints>
+                        <properties>
+                          <text value="2022-07-18"/>
+                        </properties>
+                      </component>
+                      <component id="388fb" class="javax.swing.JTextField" binding="txtFld_lastDate">
+                        <constraints>
+                          <grid row="5" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                            <preferred-size width="150" height="-1"/>
+                          </grid>
+                        </constraints>
+                        <properties>
+                          <text value="2022-07-23"/>
+                        </properties>
+                      </component>
+                      <component id="c08ad" class="javax.swing.JButton" binding="btn_reserveMake">
+                        <constraints>
+                          <grid row="6" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                        </constraints>
+                        <properties>
+                          <text value="Rezerve Et"/>
+                        </properties>
+                      </component>
                     </children>
                   </grid>
                   <vspacer id="da42c">
                     <constraints>
-                      <grid row="9" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+                      <grid row="3" column="0" row-span="2" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
                     </constraints>
                   </vspacer>
-                  <component id="c426a" class="javax.swing.JTextField" binding="txtFld_carID">
-                    <constraints>
-                      <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                        <preferred-size width="150" height="-1"/>
-                      </grid>
-                    </constraints>
-                    <properties>
-                      <editable value="false"/>
-                      <enabled value="false"/>
-                      <text value="0"/>
-                    </properties>
-                  </component>
-                  <component id="243e5" class="javax.swing.JLabel">
-                    <constraints>
-                      <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                    </constraints>
-                    <properties>
-                      <text value="                  "/>
-                    </properties>
-                  </component>
-                  <component id="68ff9" class="javax.swing.JTextField" binding="txtFld_firstDate">
-                    <constraints>
-                      <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                        <preferred-size width="150" height="-1"/>
-                      </grid>
-                    </constraints>
-                    <properties>
-                      <text value="2022-07-18"/>
-                    </properties>
-                  </component>
-                  <component id="388fb" class="javax.swing.JTextField" binding="txtFld_lastDate">
-                    <constraints>
-                      <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                        <preferred-size width="150" height="-1"/>
-                      </grid>
-                    </constraints>
-                    <properties>
-                      <text value="2022-07-23"/>
-                    </properties>
-                  </component>
-                  <component id="eaa99" class="javax.swing.JLabel">
-                    <constraints>
-                      <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                    </constraints>
-                    <properties>
-                      <text value="Tarih Aralığı"/>
-                    </properties>
-                  </component>
-                  <component id="c08ad" class="javax.swing.JButton" binding="btn_reserveMake">
-                    <constraints>
-                      <grid row="8" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                    </constraints>
-                    <properties>
-                      <text value="Rezerve Et"/>
-                    </properties>
-                  </component>
-                  <component id="98b3f" class="javax.swing.JLabel">
-                    <constraints>
-                      <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                    </constraints>
-                    <properties>
-                      <text value="Araç ID"/>
-                    </properties>
-                  </component>
                 </children>
               </grid>
             </children>
@@ -349,7 +343,7 @@
                       <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
                     </constraints>
                   </vspacer>
-                  <component id="d1448" class="javax.swing.JTextField" binding="araçTextField1" default-binding="true">
+                  <component id="d1448" class="javax.swing.JTextField" binding="txtFld_deleteReserve">
                     <constraints>
                       <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                         <preferred-size width="150" height="-1"/>
@@ -357,10 +351,10 @@
                     </constraints>
                     <properties>
                       <enabled value="false"/>
-                      <text value="Araç"/>
+                      <text value=""/>
                     </properties>
                   </component>
-                  <component id="88b6f" class="javax.swing.JButton" binding="iptalButton" default-binding="true">
+                  <component id="88b6f" class="javax.swing.JButton" binding="btn_deleteReserve">
                     <constraints>
                       <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
